# internal/api/controllers/tournament.controller.go
@@ -170,7 +170,7 @@ func (cr *TournamentController) DeleteTournaments(c *fiber.Ctx) error {
 //	@Param			search								query		string						false	"search"
 //	@Success		200									{array}		dtos.TournamentsResponse	"All tournaments"
 //	@Failure		400									{object}	dtos.MessageResponseType	"Failed to get all tournaments"
-//	@Router			/api/tournament/tournaments [get]																																																																																																																																																																																																																																																																																																																																																																																																																																																																				[get]
+//	@Router			/api/tournament/tournaments [get]																																																																																																																																																																																																																																																																																																																																																																																																																																																																																				[get]
 func (cr *TournamentController) GetAllTournaments(c *fiber.Ctx) error {
 	q := new(dtos.PaginationQueries)
 	if err := c.QueryParser(q); err != nil {
@@ -234,7 +234,7 @@ func (cr *TournamentController) GetTournamentStats(c *fiber.Ctx) error {
 //	@Accept			json
 //	@Produce		json
 //	@Param			tournamentId	path		string						true	"Tournament id"
-//	@Success		200				{object}	dtos.TournamentsResponse	"Tournament"
+//	@Success		200				{object}	models.Tournament			"Tournament"
 //	@Failure		400				{object}	dtos.MessageResponseType	"Tournament not found"
 //	@Router			/api/tournament/details/{tournamentId} [get]
 func (cr *TournamentController) GetTournamentDetails(c *fiber.Ctx) error {
